# hse-2019-cpp

./: README.md
hw_03/: CMakeLists.txt  test_decode.txt
hw_03/doctest/src/doctest-stamp/: doctest-download-.cmake
hw_03/include/: CLI.h  Huffman.h  HuffmanArchiver.h
hw_03/src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  main.cpp
hw_03/test/: HuffmanArchiverTest.cpp  HuffmanTreeTest.cpp  TestCLI.cpp
